<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HtmlActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginRight="10sp"
                    android:contentDescription="@string/HTML_logo"
                    app:srcCompat="@drawable/html_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:layout_marginBottom="15sp"
                    android:fontFamily="@font/alice"
                    android:text="@string/Head_HTML"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/average"
                android:text="@string/HTML_Line0"
                android:textColor="#201818"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/average"
                android:text="@string/HTML_Line1"
                android:textColor="#201818"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/average"
                android:text="@string/HTML_Line2"
                android:textColor="#201818"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/alice"
                android:gravity="center"
                android:text="@string/Head_HTML1"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/average"
                android:text="@string/HTML_Line4"
                android:textColor="#201818"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="3sp"
                android:layout_marginEnd="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/average"
                android:text="@string/HTML_Line5"
                android:textColor="#201818"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/average"
                android:text="@string/HTML1"
                android:textColor="#201818"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/average"
                android:text="@string/HTML2"
                android:textColor="#201818"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginEnd="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/average"
                android:text="@string/HTML3"
                android:textColor="#201818"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/alice"
                android:gravity="center"
                android:text="@string/Head_HTML2"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="normal" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>